--- a/src/components/main.css
+++ b/src/components/main.css
@@ -101,9 +101,9 @@
     border-bottom: 2px solid #000;
 }
 
-.c1 div a img::before{
+/* .c1 div a img::before{
     content: url("../imgs/20211202_0818009_002.jpg")
-}
+} */
 
 .inner h2{
     position: absolute;
@@ -160,7 +160,9 @@
     display: block;
 }
 
-
+.control_1 .on{
+    display: block;
+}
 
 .stop{ 
     display: none;
